--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-midnight
+theme: jekyll-theme-modernist
 title: cyberelic
 description: Bookmark this to keep an eye on my project updates!
